--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main"></div>
-        <div class="navbar"></div>
-        <div class="icon"></div>
-            <h2 class="logo">SAITEJ</h2>
+    <div class="main">
+    <nav>
+        <img src="logo.png" class="logo">
+        <ul><li><a href="#">Travel guide</a></li>
+            <li><a href="#">famous places</a></li>
+            <li><a href="#">about</a></li>
+        </ul>
+        <button class="button"><img src="icon.png" alt="">enter</button>
+    </nav>
+    <div class="content">
+        <h1>Ride<br>to your heart content</h1>
+        <p>Madyalo petrol kottinchukodam marchipoku</p>
+        <form>
+            <input type="text" placeholder="Country name">
+            <button type="submit" class="button">search</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
